src/Mapbender/CoreBundle/Resources/public/sass/element/search_router.scss
$searchRouterInputWidth: 100%;
.mb-element-searchrouter {
  display: block;

  .labelInput {
    width: auto;
    line-height: 14px;
    font-weight: normal;
    margin-bottom: 0;
    /*float:left;*/
  }
  .dropdown, .input {
    /*float:left;*/
    width: $searchRouterInputWidth;
    margin-bottom: $space/2;
  }
  .dropdown {
    min-width: $searchRouterInputWidth;
  }
  .ui-helper-hidden-accessible {
    display: none;
  }
  .search-results {
    overflow-y: auto;
    //overflow-x: hidden;
    > .result-counter {
      margin-bottom: 2px;
    }
    > table {
      margin-top: 2px;
      margin-bottom: 5px;
      > thead {
        background-color: #c0c0c0;
        > th {
          padding-left: 3px;
          padding-right: 3px;
          text-align: left;
          font-size: 11px;
          font-weight: bold;
        }
      }
      tr {
        border-bottom: 1px solid #d3d3d3;
        &.odd {
          background-color: #f1f1f1;
        }
        &.even {
          background-color: #ffffff;
        }
        &:hover {
          background-color: lighten(#578e2a, 30%);
          color: #fff;
        }
        td {
          padding-left: 2px;
          padding-right: 2px;
        }
      }
    }
  }
  .search-action-buttons {
    a.button {
      text-decoration: none;
      &:hover, &:active, &:focus {
        color: #fff;
      }
    }
  }
  th {
    @extend .subTitle;
    text-align: left;
    padding-right: 3px;
  }
  td {
    padding-right: $space/2;
  }
  tr {
    @extend .linkButton
  }
  .search-forms > form > div > div {
    clear: both;
  }
  // the ugly and unflexible way

  .result-counter {
    text-align: right;
  }
  .inputWrapper {
    width: $searchRouterInputWidth;
  }
}

// ui-autocomplete ui-front ui-menu ui-widget ui-widget-content search-router
// dublicate ! > components

//search-router

.search-router.ui-autocomplete {
  z-index: 20000;
  background-color: #FFF;
  color: $secondColor;
  cursor: pointer;
  line-height: $lineHeight;
  max-width: $searchRouterInputWidth;
  max-height: 200px;
  overflow: auto;
  border: solid 1px lighten($thirdColor, 15%);
  font-size: $fontSize - 2;

  li {
    padding-left: 5px;
    &:hover, &.ui-state-focus {
      color: $ciColor;
      background-color: $contentColor;
    }
  }
}

